# fynx

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  README.md  TODO.md  benchmark.py  benchmark2.py  benchmark_arena.py  benchmark_frontend.py  debug_store.py  demo_output.txt  frontend.py  index.html  objects.inv  optimized_benchmark.py  optimizer_demo.py  profile_output.prof  prototype.py  pyproject.toml  pytest.ini  quick_benchmark.py  sitemap.xml  test.py  test_deep_chains.py  test_final.py  test_nested_computations.py  test_readme_watch.py  test_using_reactive_examples.py
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
1.0_TODO/: index.html
api/api/: index.html
assets/javascripts/: mathjax.js
assets/stylesheets/: extra.css
docs/: 1.0_TODO.md  README.md  index.md
docs/generation/: mkdocs.yml
docs/javascripts/: mathjax.js
docs/specs/: v1.0-roadmap.md
docs/stylesheets/: extra.css
examples/: advanced_user_profile.py  basics.py  cart_checkout.py  fynx_is_you.py  gravity.py  using_reactive_conditionals.py  using_watch.py
examples/streamlit/: store.py  todo_app.py  todo_item_model.py  todo_store.py
fynx/: __init__.py  base.py  computed.py  delta_kv_store.py  delta_nodes.py  equality.py  frontend.py  global_store.py  math_optimizations.py  observable.py  reactive.py  registry.py  store.py  types.py  watch.py
fynx/observable/: __init__.py  base.py  computed.py  conditional.py  descriptors.py  interfaces.py  merged.py  operands.py  operations.py  operators.py  optimizations.py
fynx/optimizer/: __init__.py  morphism.py  optimizer.py  reactive_graph.py
fynx/util/: __init__.py  adaptive_observer_set.py  algebraic_optimizer.py  arena.py  chain.py  cow_observer_set.py  cycle_detector.py  function_flyweight.py  kv_store.py  reactive_kv_store.py  soa_observer_set.py
generation/: mkdocs.yml
generation/scripts/: generate_html.py  preview_html_docs.sh
mathematical/mathematical-foundations/: index.html
reference/api/: index.html
reference/computed-observable/: index.html
reference/conditional-observable/: index.html
reference/merged-observable/: index.html
reference/observable/: index.html
reference/observable-descriptors/: index.html
reference/observable-operators/: index.html
reference/reactive-decorator/: index.html
reference/store/: index.html
scripts/: benchmark  benchmark.py  bump_version.py  deploy_docs.sh  deploy_pypy.sh  deploy_pypy_test.sh  dev  install_package_locally.sh  lint.sh  rxpy.py  test-pypi.dockerfile  test_pypy.sh
scripts/benchmarks/: benchmark_high_scores.json  rxpy.py  text_components.py  utils.py
scripts/docker/: Dockerfile  test-matrix.sh
search/: search_index.json
specs/v1.0-roadmap/: index.html
stylesheets/: extra.css
tests/: CONVENTIONS.md  __init__.py  conftest.py  test_basic.py  test_circular_dependency.py  test_computed.py  test_conditionals.py  test_delta_algebras.py  test_delta_store.py  test_delta_store_benchmarks.py  test_derived_observables.py  test_factories.py  test_observables.py  test_optimizer.py  test_reactive.py  test_readme.py  test_store.py  test_stores.py  test_subscription.py  test_watch.py
tests/integration/: __init__.py  test_basic.py  test_circular_dependency.py  test_optimizer.py  test_reactive_system_interactions.py  test_readme.py  test_topo_reactive_graph.py
tests/unit/: __init__.py  (+3 more)
(+162 files in other folders)
