[tool.poetry]
name = "fynx"
version = "0.0.1"
description = "Python reactive state management library inspired by MobX"
authors = ["Cassidy Bridges <cassidybridges@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/off-by-some/fynx"
repository = "https://github.com/off-by-some/fynx"
keywords = ["reactive", "state-management", "observable", "functional-programming", "mobx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
packages = [{include = "fynx"}]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.docs.dependencies]
sphinx = ">=4.0.0"
sphinx-rtd-theme = ">=1.0.0"
myst-parser = ">=0.18.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
pytest-cov = ">=4.0.0"
black = ">=22.0.0"
isort = ">=5.10.0"
mypy = ">=1.0.0"
pre-commit = ">=2.20.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.4.2,<9.0.0"
pytest-cov = ">=4.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
